Updated homepage/about text and fixed responsive layout issues
In this commit, I updated the text on the homepage to improve clarity and fixed responsive layout issues that were causing display problems on smaller screens. This involved adjusting CSS and media queries to ensure a more consistent user experience across different devices.

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,16 @@
   font-style: normal;
 }
 
+body {
+  background-color: var(--main-bg-color);
+}
+
 p {
   font-family: "Roboto", sans-serif;
+}
+
+body::-webkit-scrollbar {
+  width: 0;
 }
 
 #designedHeader,
@@ -66,7 +74,7 @@ p {
 .headerInformationContainer h2 {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 2.96em;
+  font-size: 2.79em;
 }
 
 .headerInformationContainer p {
@@ -146,19 +154,20 @@ main {
 
 #aboutMeContainer,
 #mySkillsContainer {
-  width: 22%;
+  /* width: 22%; */
+  width: 28%;
   z-index: 99;
   display: flex;
   flex-direction: column;
 }
 
 #mySkillsContainer {
-  width: 20%;
+  width: 25%;
 }
 
 .aboutImageContainer {
   position: absolute;
-  width: 650px;
+  width: 33%;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -179,7 +188,7 @@ main {
   display: flex;
   flex-direction: column;
   row-gap: 3px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 #aboutMeTitleContainer p,
@@ -210,7 +219,7 @@ main {
   font-weight: 700;
   font-family: Roboto;
   color: #fff;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 .aboutMeDescription {
@@ -226,7 +235,7 @@ b {
 
 #skillsGridContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 30px;
   justify-content: end;
 }
@@ -275,7 +284,7 @@ b {
 
 #projectsMain {
   width: auto;
-  padding-top: 250px;
+  padding-top: 200px;
   display: flex;
   /* flex-direction: row; */
   justify-content: start;
@@ -413,14 +422,12 @@ button {
 }
 
 #contactMain {
-  padding-top: 250px;
-  /* display: flex;
-  align-items: center;
-  column-gap: 30px; */
+  padding-top: 200px;
+  height: auto;
 }
 
 #contactWrapper {
-  height: 550px;
+  height: 500px;
   display: flex;
   column-gap: 30px;
 }
@@ -436,7 +443,7 @@ button {
 #contactLogosContainer {
   height: 50%;
   background-color: #1f2831;
-  padding: 50px;
+  padding: 40px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -463,7 +470,7 @@ button {
 #contactConnectContainer {
   height: 50%;
   background-color: #1f2831;
-  padding: 50px;
+  padding: 40px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -507,7 +514,7 @@ button {
 
 #contactFormContainer {
   background-color: #1f2831;
-  padding: 50px;
+  padding: 40px;
   width: 50%;
   height: 100%;
   display: flex;
@@ -548,12 +555,12 @@ button {
 }
 
 @media (max-width: 1440px) {
-  .aboutImageContainer {
+  /* .aboutImageContainer {
     width: 560px;
-  }
+  } */
 
   #aboutMeContainer {
-    width: 28%;
+    width: 32%;
   }
 
   #mySkillsContainer {
@@ -561,7 +568,7 @@ button {
   }
 
   #contactMain {
-    padding-top: 220px;
+    padding-top: 200px;
   }
 
   #contactWrapper {
@@ -569,7 +576,7 @@ button {
   }
 
   #projectsMain {
-    padding-top: 220px;
+    padding-top: 200px;
   }
 }
 
@@ -577,9 +584,9 @@ button {
   #aboutMain {
     padding-top: 150px;
   }
-  .aboutImageContainer {
+  /* .aboutImageContainer {
     width: 450px;
-  }
+  } */
 
   #aboutMeContainer {
     width: 30%;
@@ -846,7 +853,7 @@ button {
   }
 
   .headerInformationContainer h2 {
-    font-size: 2.07em;
+    font-size: 1.95em;
   }
 
   .headerInformationContainer p {
